--- a/app/bower.json
+++ b/app/bower.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bootstrap": "~3.3.4",
     "angular": "~1.3.15",
-    "angular-messages": "~1.3.15"
+    "angular-messages": "~1.3.15",
+    "angular-route": "~1.4.0"
   }
 }
